<resources>
    <string name="app_name">Foodle</string>
    <string name="search_contentDescription">Search</string>
    <string name="map_contentDescription">Map</string>
    <string name="filter_contentDescription">Filter</string>
    <string name="show_all">전체보기</string>
    <string name="my_order_default">내 주문()</string>
    <string name="my_order">내 주문(%1$d)</string>
    <string name="minute">분</string>
    <string name="price_type">원</string>
    <string name="put_in">담기</string>
    <string name="direct_order">바로주문</string>
    <string name="order">주문하기</string>
    <string name="phone">전화</string>
    <string name="map">지도</string>
    <string name="str_done">완료</string>
    <string name="pickup_time">픽업시간</string>
    <string name="pickup_time_colon">픽업시간 :</string>
    <string name="minimum_prepare_time">최소 소요 시간 :</string>
    <string name="order_now">지금 주문</string>
    <string name="expect_today_order">당일 예약 주문</string>
    <string name="cancel">취소</string>
    <string name="done">완료</string>
    <string name="after_minute">%1$d 분 후</string>
    <string name="pick_time_reset">재설정</string>
    <string name="pickup_after_time"> 픽업!</string>
    <string name="payment_type">결제방법</string>
    <string name="payment_credit">신용카드</string>
    <string name="payment_mobile_phone">휴대폰</string>
    <string name="payment_toss">Toss</string>
    <string name="order_user_info">주문자 정보</string>
    <string name="order_user_info_change">변경하기</string>
    <string name="cart">장바구니</string>
    <string name="list_contentDescription">Back to List</string>
    <string name="ready_to_receipt">접수\n대기</string>
    <string name="ready_to_pickup">준비\n완료</string>
    <string name="now_prepare">준비\n중</string>
    <string name="order_detail_list">주문 내역</string>
    <string name="word_pickup_time">픽업시간 :</string>
    <string name="word_pickup_finish">픽업완료 :</string>
    <string name="msg_agree_payment">동의하고 결제하기</string>
    <string name="word_past_order_list">지난 주문 내역</string>
    <string name="word_reorder">재주문</string>
    <string name="txt_payment_success">결제 완료!</string>
    <string name="word_delivering_by_foodle">푸들이 주문을 전달 중 입니다</string>
    <string name="word_pickup_terms_first">주문내용을 확인하고 구매진행에 동의합니다.</string>
    <string name="word_pickup_terms_second">알림이 오면 메뉴를 바로 가져가세요\n<u>접수완료 후 주문취소는 불가</u>하며 가져가지 않은 메뉴는\n환불되지 않습니다</string>
    <string name="word_pickup_personal_info_agree_term">개인정보 수집 및 이용동의</string>
    <string name="word_pickup_personal_term_show">약관보기</string>
    <string name="word_pickup_personal_info_3rd_term">개인정보 제 3자 정보제공 동의</string>
    <string name="word_dialog_confirm_cancel_order">주문 완료가 되지 않은 음식이 있습니다.\n주문을 취소하시겠습니까?</string>
    <string name="txt_no">아니오</string>
    <string name="txt_yes">예</string>
    <string name="txt_cart_add_menu">의 메뉴 추가하기</string>
    <string name="txt_sms_auth">휴대폰 번호 인증</string>
    <string name="notification">NOTIFICATION</string>
    <string name="word_auth_info_1">원활한 사용을 위해 휴대폰 인증을 해주세요.</string>
    <string name="word_auth_info_2">인증된 번호는 결제 시 연락처에 자동으로 입력됩니다.</string>
    <string name="txt_phone_number">휴대폰 번호</string>
    <string name="txt_send_auth_number">인증번호 전송</string>
    <string name="txt_input_auth_number">인증번호 입력</string>
    <string name="txt_auth">인증</string>
    <string name="txt_remain_time">남은시간 :</string>
    <string name="txt_sms_resend">인증번호 재전송</string>
    <string name="word_auth_confirm">인증되었습니다. \'확인\'을 누르면 서비스가 시작됩니다.</string>
    <string name="txt_wrong_auth_number">잘못된 인증번호</string>
    <string name="word_now_order_guide">접수가 완료 되면 바로 조리를 시작해요. 매장 상황에 따라 최소 소요 시간보다 조금 더 늦어질 수 있어요.</string>
    <string name="txt_agreement_terms_and_conditions">이용동의</string>
    <string name="txt_agreement_terms_1"><u>이용약관 동의</u></string>
    <string name="txt_agreement_terms_2"><u>개인정보 수집이용 동의</u></string>
    <string name="txt_agreement_terms_3"><u>전자금융거래 이용약관 동의</u></string>
    <string name="txt_agreement_terms_4"><u>위치 기반 서비스 이용 약관 동의</u></string>
    <string name="txt_google">구글</string>
    <string name="txt_facebook">페이스북</string>
    <string name="word_preview"><u>우선 둘러볼게요</u></string>
    <string name="word_sign_up_with_account">계정으로 이용하기</string>
    <string name="word_sign_up_with_facebook">페이스북으로 이용하기</string>
    <string name="word_sign_up_with_google_account">구글계정으로 이용하기</string>
    <string name="word_all_agreement_under_terms">아래의 이용약관에 모두 동의</string>
    <string name="word_detail_all_agreement_under_terms">이용약관, 개인정보 보호정책, 전자금융거래 이용\n약관은 필수 동의 사항으로 원활한 서비스 이용을\n위해서는 약관에 대한 동의가 필요합니다.</string>
    <string name="facebook_app_id">1345115008865612</string>
    <string name="txt_order_end_time">주문 마감</string>
    <string name="txt_by_walk">도보</string>
    <string name="txt_recommend">추천</string>
    <string name="txt_take_time">걸려요</string>
    <string name="txt_cannot_walk">도보 무리</string>
</resources>