<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="148dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/word_dialog_confirm_cancel_order"
            android:textColor="#CC000000"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="21dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_cancel_confirm_dialog_no"
                android:layout_width="78dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/txt_no"
                android:textColor="#CC000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/button_cancel_confirm_dialog_yes"
                android:layout_width="46.5dp"
                android:layout_height="42dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/txt_yes"
                android:textColor="@color/colorFocusedText"
                android:textSize="18dp" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>