<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.xeed.cheapnsale.activity.TermsConditionsDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_terms_detail"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        android:padding="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_back_button_terms_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/white"
                    android:contentDescription="@string/search_contentDescription"
                    android:src="@drawable/ico_back" />

                <TextView
                    android:id="@+id/text_title_terms_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    tools:text="@string/txt_agreement_terms_and_conditions"
                    android:textColor="@android:color/black"
                    android:textSize="17dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#d3d3d3" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/text_terms_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar_terms_detail"
        android:text="@string/txt_agreement_terms_1" />

</RelativeLayout>